--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Here But There Bookmarklet</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .container {
+            max-width: 600px;
+            text-align: center;
+        }
+    </style>
 </head>
-<body class="container mt-4">
+<body>
 
+<div class="container">
     <p>Drag the link below to your bookmarks bar:</p>
     <a class="btn btn-primary" href="javascript:(function(){if(typeof window.myWakeLock === 'undefined' || window.myWakeLock.released){if('wakeLock' in navigator){async function requestWakeLock(){try{window.myWakeLock=await navigator.wakeLock.request('screen');alert('Not Here But There is activated. \nTo deactivate press the Not Here But There bookmarklet again. \nWARNING: Not Here But There will automatically deactivate if the tab is changed or a new window opens.');document.addEventListener('visibilitychange',async ()=>{if(document.visibilityState==='visible' && window.myWakeLock && !window.myWakeLock.released){await navigator.wakeLock.request('screen');}});window.myWakeLock.addEventListener('release', function(){alert('Not Here But There deactivated');});}catch(err){alert('Unable to activate Not Here But There: ' + err.name + ' - ' + err.message);}}requestWakeLock();}else{alert('Not Here But There is not supported in this browser.');}}else{window.myWakeLock.release();}})();">Not Here But There</a>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
